cmake_minimum_required(VERSION 3.1)
project (cocls)
set (CMAKE_CXX_STANDARD 20)
add_compile_options(-Wall -Wno-noexcept-type)
exec_program("git submodule update --init")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin/)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib/)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib/)
if(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
	set(CMAKE_INSTALL_PREFIX "/usr/local" CACHE PATH "Default path to install" FORCE)
endif()
include(library.cmake)
add_subdirectory("src/tests")
