cmake_minimum_required(VERSION 3.1)

link_libraries($(STANDARD_LIBRARIES))

add_executable (signal signal.cpp)
add_executable (blocking_limited_queue blocking_limited_queue.cpp)
add_executable (callback_awaiter callback_awaiter.cpp)
add_executable (cancelable_timer cancelable_timer.cpp)
add_executable (cooperative_multitasking cooperative_multitasking.cpp)
add_executable (detached_thread_pool detached_thread_pool.cpp)
add_executable (discard_future discard_future.cpp)
add_executable (future_coro  future_coro.cpp)
add_executable (future  future.cpp)
add_executable (future_switch_to  future_switch_to.cpp)
add_executable (generator_aggregator_async  generator_aggregator_async.cpp)
add_executable (generator_aggregator_async_infinite  generator_aggregator_async_infinite.cpp)
add_executable (generator_aggregator  generator_aggregator.cpp)
add_executable (generator_aggregator_infinite  generator_aggregator_infinite.cpp)
add_executable (generator_aggregator_with_arg generator_aggregator_with_arg.cpp)
add_executable (generator_async_await_exception  generator_async_await_exception.cpp)
add_executable (generator_async_await  generator_async_await.cpp)
add_executable (generator_async_await_limited  generator_async_await_limited.cpp)
add_executable (generator_async  generator_async.cpp)
add_executable (generator_await  generator_await.cpp)
add_executable (generator  generator.cpp)
add_executable (generator_infinite  generator_infinite.cpp)
add_executable (generator_iterator generator_iterator.cpp)
add_executable (generator_with_arg generator_with_arg.cpp)
add_executable (goroutine1 goroutine1.cpp)
add_executable (make_promise  make_promise.cpp)
add_executable (mutex mutex.cpp)
add_executable (mutex_release mutex_release.cpp)
add_executable (publisher_subscriber publisher_subscriber.cpp)
add_executable (queue queue.cpp)
add_executable (queue_void queue_void.cpp)
add_executable (shared_future  shared_future.cpp)
add_executable (scheduler scheduler.cpp)
add_executable (scheduler_single_thread scheduler_single_thread.cpp)
add_executable (task  task.cpp)
add_executable (thread_pool thread_pool.cpp)
add_executable (coroutine1 coroutine1.cpp)
add_executable (coroutine2 coroutine2.cpp)


